# reader

./: Cargo.toml  guidence.md  test_fonts.rs  test_retain  test_retain.rs
.zed/: debug.json
src/: main.rs  state.rs
src/text/: builder.rs  mod.rs  output.rs  text_buffer.rs
text/: a.json  a.txt  b.txt
