[package]
name = "words"
version = "0.1.0"
edition = "2024"

[dependencies]
# 窗口管理
winit = "0.30"
# GPU 抽象层
wgpu = "0.19"
# 简单的异步执行器（用于初始化 GPU）
pollster = "0.3"
# 基础日志（方便调试）
env_logger = "0.11"
log = "0.4"
# egui = { path = "/home/lai/code/source/egui/crates/egui" }
# eframe = { path = "/home/lai/code/source/egui/crates/eframe" }
# epaint = { path = "/home/lai/code/source/egui/crates/epaint" }
# egui_extras = { path = "/home/lai/code/source/egui/crates/egui_extras" }
ropey = "1.6.1"
rfd = "0.17.2"
egui = "0.34.1"
eframe = "0.34.1"
epaint = "0.34.1"
egui_extras = { version = "0.34.1", features = ["image", "all_loaders"] }
image = { version = "0.25.7",  default-features = false,features = ["png", "jpeg"] }
arboard = "3.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
emath = "0.34.1"
accesskit = "0.24.0"



[[bin]]
name = "words"
path = "src/main.rs"
